--- a/hubsrht/templates/project-nav.html
+++ b/hubsrht/templates/project-nav.html
@@ -30,7 +30,9 @@
   {% endif %}
   {% if any(project.trackers) %}
   <li class="nav-item">
-    {{link("#", "tickets")}}
+    {{link(url_for("trackers.trackers_GET",
+      owner=owner.canonical_name,
+      project_name=project.name), "tickets")}}
   </li>
   {% endif %}
   {# TODO
