--- a/hubsrht/templates/sources.html
+++ b/hubsrht/templates/sources.html
@@ -3,7 +3,7 @@
 {% for repo in sources %}
 <div class="event">
   <h4>
-    <a href="{{repo.url()}}">~{{owner.username}}/{{repo.name}}</a>
+    <a href="{{repo.url()}}">~{{repo.owner.username}}/{{repo.name}}</a>
     <small class="pull-right">
       {{ repo.repo_type.value }}
     </small>
@@ -17,13 +17,13 @@
 
 {% block sidebar %}
 <a
-  href="{{url_for("sources.new_GET",
-          owner=owner.canonical_name, project_name=project.name)}}"
+  href="{{url_for("sources.new_GET", owner=owner.canonical_name,
+    project_name=project.name)}}"
   class="btn btn-primary btn-block"
 >Add repository&nbsp;{{icon('caret-right')}}</a>
 <a
-  href="{{url_for("sources.manage_GET",
-          owner=owner.canonical_name, project_name=project.name)}}"
+  href="{{url_for("sources.manage_GET", owner=owner.canonical_name,
+    project_name=project.name)}}"
   class="btn btn-default btn-block"
 >Manage sources&nbsp;{{icon('caret-right')}}</a>
 {% endblock %}
