--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -63,8 +63,8 @@
             >Add mailing lists&nbsp;{{icon('arrow-right')}}</a>
             <br />
             <small class="text-muted">
-              Mailing lists give users a means of asking questions about the
-              project or sending patches to contribute to the source code.
+              Mailing lists give users a place to ask questions about the
+              project or send patches to contribute to the code.
             </small>
             {% endif %}
           </li>
@@ -99,7 +99,7 @@
               dismiss
             </button>
             You're all set! If you want to set up more things for your project,
-            click "add more" on the top right.
+            click "more +" on the top right.
           </p>
         </div>
         {% endif %}
