--- a/hubsrht/templates/project-nav.html
+++ b/hubsrht/templates/project-nav.html
@@ -1,6 +1,6 @@
 <h2>
   <a
-    href="{{url_for("users.user_summary_GET", username=owner.username)}}"
+    href="{{url_for("users.summary_GET", username=owner.username)}}"
   >{{owner.canonical_name}}</a>/{{project.name}}
 </h2>
 {% macro link(path, title, alternates, cls="") %}
