--- a/hubsrht/templates/dashboard.html
+++ b/hubsrht/templates/dashboard.html
@@ -18,7 +18,7 @@
       >Create new project {{icon("caret-right")}}</a>
       <a
         href="#"
-        class="btn btn-default btn-block"
+        class="btn btn-white btn-sm btn-block"
       >Discover projects on {{cfg('sr.ht', 'site-name')}} {{icon("caret-right")}}</a>
       <a
         href="{{url_for("public.getting_started")}}"
@@ -60,7 +60,7 @@
         <div class="pull-right">
           <a
             href="#"
-            class="btn btn-default"
+            class="btn btn-link"
           >More projects&nbsp;{{icon("caret-right")}}</a>
         </div>
         <div class="clearfix"></div>
@@ -70,13 +70,13 @@
       <div class="col-md-12">
         <div class="event-list project-events">
           {% for event in events %}
-          {{ eventutil.event(event) }}
+          {{ eventutil.event(event, project=True) }}
           {% endfor %}
         </div>
         <div class="pull-right">
           <a
             href="#"
-            class="btn btn-default"
+            class="btn btn-link"
           >More events&nbsp;{{icon("caret-right")}}</a>
         </div>
       </div>
