--- a/hubsrht/templates/resource-new.html
+++ b/hubsrht/templates/resource-new.html
@@ -4,7 +4,7 @@
   <div class="container">
     <h2>
       <a
-        href="{{url_for("users.user_summary_GET", username=owner.username)}}"
+        href="{{url_for("users.summary_GET", username=owner.username)}}"
       >{{owner.canonical_name}}</a>/{{project.name}}
     </h2>
     {% macro link(path, title, alternates, cls="") %}
