Initial pass on public project index

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -102,3 +102,10 @@
     margin-bottom: 0;
   }
 }
+
+.inline-legend {
+  float: left;
+  margin-right: 1rem;
+  display: inline;
+  width: inherit;
+}
