--- a/hubsrht/templates/dashboard.html
+++ b/hubsrht/templates/dashboard.html
@@ -17,7 +17,7 @@
         class="btn btn-primary btn-block"
       >Create new project {{icon("caret-right")}}</a>
       <a
-        href="#"
+        href="{{url_for("public.project_index")}}"
         class="btn btn-white btn-sm btn-block"
       >Discover projects on {{cfg('sr.ht', 'site-name')}} {{icon("caret-right")}}</a>
       <a
