--- a/hubsrht/templates/new-user-dashboard.html
+++ b/hubsrht/templates/new-user-dashboard.html
@@ -132,10 +132,10 @@
           </div>
           {% endif %}
           <div class="col-md-4">
-            <a href="#" class="btn btn-white btn-block">
-              Find interesting projects
-              {{icon("caret-right")}}
-            </a>
+            <a
+              href="{{url_for("public.project_index")}}"
+              class="btn btn-white btn-block"
+            >Find interesting projects {{icon("caret-right")}}</a>
           </div>
         </div>
       </div>
