Add title tags to all pages

--- a/hubsrht/templates/index.html
+++ b/hubsrht/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block title %}
+<title>{{cfg("sr.ht", "site-name")}} hub</title>
+{% endblock %}
 {% block content %}
 <div class="row">
   <div class="col-md-8">
