--- a/hubsrht/templates/project-create.html
+++ b/hubsrht/templates/project-create.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block title %}
+<title>New project - {{cfg("sr.ht", "site-name")}}</title>
+{% endblock %}
 {% block content %}
 <style>
 .form-group:last-child {
