--- a/hubsrht/templates/project-feed.html
+++ b/hubsrht/templates/project-feed.html
@@ -1,5 +1,8 @@
 {% extends "project-base.html" %}
 {% import "event.html" as eventutil with context %}
+{% block title %}
+<title>{{project.name}} activity</title>
+{% endblock %}
 {# TODO: RSS feed #}
 {% block content %}
 <div class="container">
