--- a/hubsrht/templates/sources-new.html
+++ b/hubsrht/templates/sources-new.html
@@ -1,4 +1,7 @@
 {% extends "resource-new.html" %}
+{% block title %}
+<title>New source repository - {{project.name}}</title>
+{% endblock %}
 {% block content %}
 <div class="row">
   <div class="col-lg-10" method="POST">
