--- a/hubsrht/templates/mailing-lists-manage.html
+++ b/hubsrht/templates/mailing-lists-manage.html
@@ -1,4 +1,7 @@
 {% extends "project-base.html" %}
+{% block title %}
+<title>Manage mailing lists - {{project.name}}</title>
+{% endblock %}
 {% block content %}
 <div class="container">
   <div class="row">
