--- a/hubsrht/templates/new-user-dashboard.html
+++ b/hubsrht/templates/new-user-dashboard.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block title %}
+<title>{{cfg("sr.ht", "site-name")}} dashboard</title>
+{% endblock %}
 {% block content %}
 <div class="row">
   <div class="col-md-10 offset-md-1" style="margin-top: 1rem; margin-bottom: 1rem;">
