--- a/hubsrht/templates/profile.html
+++ b/hubsrht/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% import "event.html" as eventutil with context %}
 {% block title %}
-<title>{{user.canonical_name}} on {{cfg("sr.ht", "site-name")}}</title>
+<title>{{user.canonical_name}}</title>
 {% endblock %}
 {% block content %}
 <div class="row">
