--- a/hubsrht/templates/project-config.html
+++ b/hubsrht/templates/project-config.html
@@ -1,4 +1,7 @@
 {% extends "project-base.html" %}
+{% block title %}
+<title>{{project.name}} project settings</title>
+{% endblock %}
 {% block content %}
 <div class="container">
   <div class="row">
