--- a/hubsrht/templates/project-index.html
+++ b/hubsrht/templates/project-index.html
@@ -1,6 +1,6 @@
 {% extends "layout-full.html" %}
 {% block title %}
-<title>Browse projects - {{cfg("sr.ht", "site-name")}}</title>
+<title>Browse projects on {{cfg("sr.ht", "site-name")}}</title>
 {% endblock %}
 {% block body %}
 <div class="container-fluid">
