--- a/hubsrht/templates/sources-manage.html
+++ b/hubsrht/templates/sources-manage.html
@@ -1,4 +1,7 @@
 {% extends "project-base.html" %}
+{% block title %}
+<title>Manage sources - {{project.name}}</title>
+{% endblock %}
 {% block content %}
 <div class="container">
   <div class="row">
