--- a/hubsrht/templates/sources-select.html
+++ b/hubsrht/templates/sources-select.html
@@ -1,4 +1,7 @@
 {% extends "resource-new.html" %}
+{% block title %}
+<title>New {{vcs}} repository - {{project.name}}</title>
+{% endblock %}
 {% block content %}
 <div class="row">
   <div class="col-lg-8">
