--- a/hubsrht/templates/tracker-new.html
+++ b/hubsrht/templates/tracker-new.html
@@ -1,4 +1,7 @@
 {% extends "resource-new.html" %}
+{% block title %}
+<title>New ticket tracker - {{project.name}}</title>
+{% endblock %}
 {% block content %}
 <div class="row">
   <form class="col-lg-8" method="POST">
